test/modules/diten/main-module-flag/main_with_formals.good
error: main() function with invalid signature
main_with_formals.chpl:7: note: in module main_with_formals
